--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ctrl/react-adsense": "^1.6.0",
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "math-expression-evaluator": "^1.4.0",
     "next": "12.3.1",
